platform-common/common-java/src/main/java/com/example/error/CommonErrorsAutoConfig.java
package com.example.error;

import org.springframework.context.annotation.Configuration;
import org.springframework.context.annotation.ComponentScan;

@Configuration
@ComponentScan(basePackages = "com.example.error")
public class CommonErrorsAutoConfig {
}
